# BamaStudio

./: .gitmodules  CMakeLists.txt  LICENSE  main.cpp
.github/workflows/: clang-format.yml  main.yml
BStudio/: main.qml
BStudio/Tools/: SpriteGenerator.qml
